@@ -1,5 +1,7 @@
 2011-09-06  Andreas Kupries  <andreask@activestate.com>
 
+	* generic/cpubind.c: Simplified the parsing of flags.
+
 	* tests/bitmap.test: Completed tests for all bitmap operators.
 
 	* tests/bitmap.test: Writing the tests for 'allbut' and 'only'
